# Coinsleuth

./: LICENSE  README.md  pyproject.toml
codebase/: NOTES.md  README.md  pyproject.toml
codebase/archive/: cli.py
codebase/archive/archived_data/: exp_database_24.h5  inconsistent_partitions_32.txt  inconsistent_partitions_64.txt
codebase/archive/data/: combined_mean_rows.csv  statistics_database.h5
codebase/coin_sleuth/: analysis.py  cli.py  db.py  empirical_sleuthbuilder.py  main.py  notebook.ipynb  sleuthbuilder.py  speedtest.py  ultimate_sleuthbuilder.py
codebase/coin_sleuth/data/: partition_analysis.csv  partition_analysis.xlsx  partition_analysis_10.csv
codebase/data/: statistics_database.h5  test_statistics_database.h5
codebase/data/1/: expectations_df_1.csv  observations_df_1.csv  statistics_df_1.csv
codebase/data/2/: expectations_df_2.csv  observations_df_2.csv  statistics_df_2.csv
codebase/data/3/: expectations_df_3.csv  observations_df_3.csv  statistics_df_3.csv
codebase/data/4/: expectations_df_4.csv  observations_df_4.csv  statistics_df_4.csv
codebase/data/5/: expectations_df_5.csv  observations_df_5.csv  statistics_df_5.csv
codebase/data/6/: expectations_df_6.csv  observations_df_6.csv  statistics_df_6.csv
codebase/data/7/: expectations_df_7.csv  observations_df_7.csv  statistics_df_7.csv
codebase/data/8/: expectations_df_8.csv  observations_df_8.csv  statistics_df_8.csv
codebase/tests/: speedtest.py  speedtest2.csv
sleuthbuilder/: analysis.ipynb  coinsleuth.py  empirical_sleuthbuilder.py  enhanced_sleuthbuilder.py  (+4 more)
(+6 files in other folders)
