[tool.poetry]
name = "coin-sleuth"
version = "0.1.0"
description = ""
authors = ["Nick Valente <valente.math@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
tables = "^3.9.2"
notebook = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
